--- a/CSS-Combinator/Index.html
+++ b/CSS-Combinator/Index.html
@@ -10,12 +10,12 @@
 <body>
     <section class='grand-parent'>
         <div class='parent'>
-            <p>This is normal paragrap</p>
+            <p >This is normal paragrap</p>
             <h1 class='brother'>Heading with class brother</h1>
             <h1 class='brother'>Another Heading with class brother</h1>
             <h2 class='brother'>More Brother</h2>
             <div class='brother'>
-                <h1 class="brother-son"></h1>
+                <h1 class="brother-son">Hi, I'm Bother son</h1>
             </div>
 
         </div>
