--- a/CSS-Position/index.html
+++ b/CSS-Position/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="box">
+    <div class="parent">
+        <div class="child"></div>
 
     </div>
 </body>
