--- a/Flex-grid-project/index.html
+++ b/Flex-grid-project/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>grid-flex practice project</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   </head>
   <body>
     <header></header>
@@ -85,6 +86,59 @@
       </section>
       <section class="section-title">
           <h1>Course</h1>
+          <div class="courses">
+              <div class="course">
+                  <img src="./images/Mask Group-3.png" alt="">
+                  <h3>React - The Complete <br/> Guide 2020 </h3>
+                  <p><a href="#">Reed Krakoff.</a></p>
+                  <div class="course-rating-duration">
+                    <div class="rating">
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star unfilled"></i>
+                      </div>
+                      <div class="duration">
+                          <span>1:30 hr</span>
+                      </div>
+                  </div>
+              </div>
+              <div class="course">
+                <img src="./images/Mask Group-3.png" alt="">
+                <h3>React - The Complete <br/> Guide 2020 </h3>
+                <p><a href="#">Reed Krakoff.</a></p>
+                <div class="course-rating-duration">
+                  <div class="rating">
+                      <i class="fas fa-star filled"></i>
+                      <i class="fas fa-star filled"></i>
+                      <i class="fas fa-star filled"></i>
+                      <i class="fas fa-star filled"></i>
+                      <i class="fas fa-star unfilled"></i>
+                    </div>
+                    <div class="duration">
+                        <span>1:30 hr</span>
+                    </div>
+                </div>
+            </div>
+            <div class="course">
+                <img src="./images/Mask Group-3.png" alt="">
+                <h3>React - The Complete <br/> Guide 2020 </h3>
+                <p><a href="#">Reed Krakoff.</a></p>
+                <div class="course-rating-duration">
+                  <div class="rating">
+                      <i class="fas fa-star filled"></i>
+                      <i class="fas fa-star filled"></i>
+                      <i class="fas fa-star filled"></i>
+                      <i class="fas fa-star filled"></i>
+                      <i class="fas fa-star unfilled"></i>
+                    </div>
+                    <div class="duration">
+                        <span>1:30 hr</span>
+                    </div>
+                </div>
+            </div>
+          </div>
       </section>
     </main>
     <footer></footer>
